fix(front): fix broken styles for dropdown, checkbox and radio

--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -1,13 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   --font-family: Marianne, arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-/* variables */
-:root {
-  /* toggle */
-  --rs-toggle-checked-bg: var(--charcoal);
-  --rs-toggle-checked-hover-bg: var(--gunMetal);
 }
